feat: structure + colors + icons + start of logic

--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <section id="dessin">
+        <canvas id="feuille" width="400" height="400"></canvas>
+        <div id="palette">
+            <div data-color="blue"></div>
+            <div data-color="green"></div>
+            <div data-color="yellow"></div>
+            <div data-color="red"></div>
+            <div data-color="black"></div>
+            <div data-color="white"></div>
+        </div>
+        <div id="outils">
+            <div><img src="./icons/plus.svg" alt=""></div>
+            <div><img src="./icons/minus.svg" alt=""></div>
+            <div><img src="./icons/eraser.svg" alt=""></div>
+            <div><img src="./icons/cross.svg" alt=""></div>
+        </div>
+    </section>
     <script src="./draw.js"></script>
     <script src="./app.js"></script>
 </body>
