--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                 <input type="range" min="1" max="100" value="1" class="slider" id="stroke-plus">
                 <span>100</span>
             </div>
-            
         </div>
         <div id="pack-outils">
             <div id="palette">
@@ -55,11 +54,7 @@
     <div id="choix-outils"></div>
     <div id="choix-taille"></div>
     <div id="choix-couleur"></div>
-    <script src="./draw.js"></script>
-    <script src="./app.js"></script>
+    <script src="./draw.js" type="text/javascript"></script>
+    <script src="./app.js" type="text/javascript"></script>
 </body>
 </html>
-<!--
-- chercher à sauvegarder le dessin
-- proposer d'autres couleurs
--->
