feat: file source for scripts changed due to htaccess file

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div id="choix-outils"></div>
     <div id="choix-taille"></div>
     <div id="choix-couleur"></div>
-    <script src="./draw.js" type="text/javascript"></script>
-    <script src="./app.js" type="text/javascript"></script>
+    <script src="./js-canvas-draw/draw.js" type="text/javascript"></script>
+    <script src="./js-canvas-draw/app.js" type="text/javascript"></script>
 </body>
 </html>
