--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="57x57" href="./favicons/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="./favicons/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="./favicons/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="./favicons/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="./favicons/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="./favicons/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="./favicons/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="./favicons/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="./favicons/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="./favicons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png">
-    <link rel="manifest" href="./favicons/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="./js-canvas-draw/favicons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./js-canvas-draw/favicons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./js-canvas-draw/favicons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./js-canvas-draw/favicons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./js-canvas-draw/favicons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./js-canvas-draw/favicons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./js-canvas-draw/favicons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./js-canvas-draw/favicons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./js-canvas-draw/favicons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="./js-canvas-draw/favicons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./js-canvas-draw/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./js-canvas-draw/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./js-canvas-draw/favicons/favicon-16x16.png">
+    <link rel="manifest" href="./js-canvas-draw/favicons/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="./favicons/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="./js-canvas-draw/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <title>Canvas Drawing Page</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./js-canvas-draw/styles.css">
 </head>
 <body>
     <section id="dessin">
@@ -45,9 +45,9 @@
                 <div data-color="purple"></div>
             </div>
             <div id="outils">
-                <div id="save"><img src="./icons/save.svg" alt=""></div>
-                <div id="gomme"><img src="./icons/eraser.svg" alt=""></div>
-                <div id="effacer"><img src="./icons/cross.svg" alt=""></div>
+                <div id="save"><img src="./js-canvas-draw/icons/save.svg" alt=""></div>
+                <div id="gomme"><img src="./js-canvas-draw/icons/eraser.svg" alt=""></div>
+                <div id="effacer"><img src="./js-canvas-draw/icons/cross.svg" alt=""></div>
             </div>
         </div>
     </section>
